--- a/app/package.json
+++ b/app/package.json
@@ -18,7 +18,8 @@
     "react-webcam": "^5.2.2",
     "redux": "^4.0.5",
     "video-react": "^0.14.1",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "recharts": "^2.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
